# Assisstive-Robotic-Arm

./: .gitignore  AI_CONTEXT  README.md
.github/workflows/: ci-main.yml  ci-master.yml
Electrical/: README.md
Mechanical/: README.md
Mechanical/CAD_Assembly/: Assembly 2 - Forearm–Arm joint_2 (1).mtl  Assembly 2 - Part 1 (1).mtl  Assembly 2 - Part 1 (10).mtl  Assembly 2 - Part 1 (14).mtl
Simulation/: README.md
Simulation/CopelliaSim/: CAD_Assembly  run_coppelia.sh
Simulation/CopelliaSim/lua/: arm_controller.lua
Simulation/CopelliaSim/scene/: README.md
Software/: Makefile  README.md  todo.txt
Software/Production/: Makefile  README.md
Software/Production/esp32_joystick/: Makefile
Software/Production/esp32_joystick/template_library/: Makefile
Software/Production/nvidia_jetson/: Cargo.toml  Makefile
Software/Production/nvidia_jetson/src/: lib.rs  lib1.rs
Software/Production/stm_nucleo/: Makefile
Software/Production/test_framework/: module.mk  test_framework.h  test_main.c
Software/sandbox/AprilTag_PoseDetector/: README.md  requirements.txt  setup.sh
Software/sandbox/AprilTag_PoseDetector/rust_pose_detector/: Cargo.toml
Software/sandbox/AprilTag_PoseDetector/rust_pose_detector/src/: .main.rs.swp  main.rs
Software/sandbox/AprilTag_PoseDetector/src/: camera_calibrate.py  detect_pose.py
Software/sandbox/AprilTag_PoseDetector/tools/: generate_tag_pdf.sh  make_tag_pdf.py
Software/sandbox/robot-arm-3d-sim/: README.md  requirements.txt  run.sh
Software/sandbox/robot-arm-3d-sim/configs/: robot_arm.yaml
(+14 files in other folders)
